# ChangeLog for media-gfx/fbv
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/fbv/ChangeLog,v 1.18 2011/02/26 17:08:40 signals Exp $

  26 Feb 2011; Kevin McCarthy <signals@gentoo.org> fbv-1.0b.ebuild:
  Updated depends from media-libs/jpeg to virtual/jpeg

  16 Feb 2010; Steve Dibb <beandog@gentoo.org> fbv-1.0b.ebuild:
  Fix typo, bug 305149

  03 Jan 2009; Christoph Mende <angelos@gentoo.org> -fbv-0.99.ebuild,
  fbv-1.0b.ebuild:
  QA: Cleanup, respect CFLAGS (bug 240794)

  11 May 2008; <solar@gentoo.org> fbv-1.0b.ebuild:
  - keyworded for ~arm

  12 Jun 2006; Daniel Black <dragonheart@gentoo.org> fbv-1.0b.ebuild:
  remove bmp - thanks jakub as per bug #136493

  10 Aug 2005; Luis Medinas <metalgod@gentoo.org> fbv-1.0b.ebuild:
  Marked ~amd64.

  22 Jul 2005; David Holm <dholm@gentoo.org> fbv-1.0b.ebuild:
  Added to ~ppc.

  21 Jul 2005; Markus Rothe <corsair@gentoo.org> fbv-1.0b.ebuild:
  Stable on ppc64

  20 Jul 2005; Daniel Black <dragonheart@gentoo.org> fbv-0.99.ebuild,
  fbv-1.0b.ebuild:
  finished fixed for giflib and the deprecation of libungif - bug #85720

  24 Apr 2005; Daniel Black <dragonheart@gentoo.org> fbv-0.99.ebuild:
  Changed libungif to giflib for version 0.99

  28 Mar 2005; Michał Januszewski <spock@gentoo.org> fbv-1.0b.ebuild:
  Removed dependency on libungif and changed the makefiles so that everything
  could work properly with giflib.

  30 Jan 2005; Daniel Black <dragonheart@gentoo.org>
  +files/oob-segfault-fbv-1.0b.diff, fbv-1.0b.ebuild, +metadata.xml:
  Patch added as per bug 78015. Thanks to Philip Nilsson <leffeman@gmail.com>

  26 Jan 2005; Markus Rothe <corsair@gentoo.org> fbv-0.99.ebuild:
  Stable on ppc64

*fbv-1.0b (04 Jan 2005)

  04 Jan 2005; Daniel Black <dragonheart@gentoo.org> fbv-0.99.ebuild,
  +fbv-1.0b.ebuild:
  QA fix - eclass gcc replaced with toolchain-funcs. Version bump as per bug
  #76535 by Philip Nilsson <leffeman@gmail.com>
