@@ -1,5 +1,15 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX oob-segfault-fbv-1.0b.diff 559 RMD160 95ca87d8166bfdeae812aa3c9a69e7896f5130cf SHA1 3dc28bce9d372a380be76b58e1d44446820ad845 SHA256 ccc655a98fb41485d100178cf724fc7577c71bc571b227f25bf4921ebf601341
 DIST fbv-1.0b.tar.gz 18989 RMD160 d7b1c9542e8bcd38edf33a47fa87560716ef77d7 SHA1 96eb6d345286b50d32a985b7e447e2f9f7c96bed SHA256 9b55b9dafd5eb01562060d860e267e309a1876e8ba5ce4d3303484b94129ab3c
 EBUILD fbv-1.0b.ebuild 1257 RMD160 741117f1c9115df3a4a54e2941efe1f54f71830e SHA1 d1198a6ed4fc2ccf4989a3d46c4d1ee0169de032 SHA256 640bfe1bd9ba02269cc3cc794c982c0626ab569223032ed6f23f795dfd811c25
-MISC ChangeLog 2407 RMD160 b6ee027570f7ad48237b07974f62516dafc8a0fe SHA1 c8cfd3cdbe047157e30b9cdfbc7a0c29d7f3a508 SHA256 30a868bd4b2b235163cc1cda7e6bef7ed4b6be4a3e97ced831092ddc0377ad17
-MISC metadata.xml 456 RMD160 98d8002443b6963a352b2038ba8f15d59677f38c SHA1 7df378f62714be2b915c0b1aa94a79b620e6712f SHA256 549ca92a02b621bd14dd7202390b22cbe0f392c539c30220245c00781ac87efe
+MISC ChangeLog 2511 RMD160 8222797d4c584f8cc844f90a2899988c7a4dd2c9 SHA1 fe4920add4ca7fa7fa95dfd1b5f3ed6098913353 SHA256 d6aa9633df0997c7ab18e9515f3508ab23a43d960c0321ec4ccd2d40011bb324
+MISC metadata.xml 269 RMD160 adcd5df087cf3200906fc1da91acd65126a90c5c SHA1 8a5793af1c2c8223fd3f4c1f6ac42e051dfdb8d2 SHA256 1407df3776bc737a3e807080744032b20021bb5ac6a77ef2f8ff24856f14d393
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iEYEARECAAYFAk4m5wIACgkQCaWpQKGI+9S9EwCfSMiadf+JgkXBQhbMjq+0us8r
+8XQAn1olZwfjpzUIkN0VFCoGAfeN4t+j
+=O2Vy
+-----END PGP SIGNATURE-----
