@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/fbv
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/fbv/ChangeLog,v 1.18 2011/02/26 17:08:40 signals Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/fbv/ChangeLog,v 1.19 2011/07/20 14:32:29 pacho Exp $
+
+  20 Jul 2011; Pacho Ramos <pacho@gentoo.org> metadata.xml:
+  Drop maintainer due retirement, bug #34534
 
   26 Feb 2011; Kevin McCarthy <signals@gentoo.org> fbv-1.0b.ebuild:
   Updated depends from media-libs/jpeg to virtual/jpeg
